--- a/expand-lagrange/Cargo.toml
+++ b/expand-lagrange/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "kovi-plugin-expand-lagrange"
-version = "0.4.0"
+version = "0.5.0"
 edition = "2021"
-keywords = ["kovi", "kovi-plugin", "kovi-plugin-expand", "kovi-expand"]
+keywords = [
+    "kovi",
+    "kovi-plugin",
+    "kovi-plugin-expand",
+    "kovi-expand",
+    "lagrange",
+]
 description = "Kovi 的 Lagrange Api拓展。"
 license = "MPL-2.0"
 authors = ["Threkork <threkork@hotmail.com>"]
