--- a/expand-lagrange/Cargo.toml
+++ b/expand-lagrange/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kovi-plugin-expand-lagrange"
-version = "0.5.0"
+version = "0.5.1"
 edition = "2021"
 keywords = [
     "kovi",
@@ -12,6 +12,7 @@ keywords = [
 description = "Kovi 的 Lagrange Api拓展。"
 license = "MPL-2.0"
 authors = ["Threkork <threkork@hotmail.com>"]
+repository = "https://github.com/Threkork/kovi-plugin/"
 
 [dependencies]
 kovi = ">= 0.8.4"
