--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = ["expand-lagrange", "expand-napcat", "like"]
+members = ["expand-lagrange", "expand-napcat", "like", "kovi-plugin-cmd"]
