--- a/kovi-plugin-cmd/Cargo.toml
+++ b/kovi-plugin-cmd/Cargo.toml
@@ -2,6 +2,7 @@
 name = "kovi-plugin-cmd"
 version = "0.1.0"
 edition = "2021"
+description = "Kovi 的管理插件，通过消息命令配置 Kovi"
 keywords = ["kovi", "kovi-plugin"]
 license = "MPL-2.0"
 authors = ["Threkork <threkork@hotmail.com>"]
