--- a/expand-lagrange/Cargo.toml
+++ b/expand-lagrange/Cargo.toml
@@ -11,7 +11,7 @@ keywords = [
 ]
 description = "Kovi 的 Lagrange Api拓展。"
 license = "MPL-2.0"
-authors = ["Threkork <threkork@hotmail.com>"]
+authors = ["ThriceCola <thricecola@hotmail.com>"]
 repository = "https://github.com/Threkork/kovi-plugin/"
 
 [dependencies]
