--- a/expand-napcat/Cargo.toml
+++ b/expand-napcat/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-authors = ["Threkork <threkork@hotmail.com>"]
+authors = ["ThriceCola <thricecola@hotmail.com>"]
 description = "Kovi 的 Napcat Api拓展。"
-edition = "2021"
+edition = "2024"
 keywords = [
     "kovi",
     "kovi-plugin",
@@ -12,8 +12,8 @@ keywords = [
 license = "MPL-2.0"
 name = "kovi-plugin-expand-napcat"
 repository = "https://github.com/Threkork/kovi-plugin/"
-version = "0.3.1"
+version = "0.4.0"
 
 [dependencies]
-kovi = ">= 0.8.4"
+kovi = ">= 0.12"
 serde = "1"
